<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_image"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <!-- Gallery layout -->
        <LinearLayout
            android:id="@+id/ly_open_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_baseline_photo_library_24"
                android:tint="@android:color/white"
                app:civ_border_width="1dp"
                app:civ_circle_color="#673AB7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery" />

        </LinearLayout>

        <!-- Camera layout -->
        <LinearLayout
            android:layout_marginStart="20dp"
            android:id="@+id/ly_open_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_baseline_photo_camera_24"
                android:tint="@android:color/white"
                app:civ_border_width="1dp"
                app:civ_circle_color="#9A3030" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>