<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".status.DisplayStatusActivity">

        <ProgressBar
            android:id="@+id/progress_horizontal"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:max="3" />


        <ImageView
            android:id="@+id/status_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_placeholder_person" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#43000000"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="10dp"
                android:onClick="callLastActivity"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_arrow_back_24"
                tools:ignore="ContentDescription" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/image_profile"
                android:layout_width="40dp"
                android:layout_margin="5dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_placeholder_person"
                app:civ_border_width="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_created_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message_date"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="#43000000"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/status_description"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/status_description"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>


        </LinearLayout>

    </RelativeLayout>

</layout>